@@ -1,84 +1,0 @@
-@comment $NetBSD: PLIST,v 1.1 2014/12/05 21:40:40 rodent Exp $
-${PYSITELIB}/apiclient/__init__.py
-${PYSITELIB}/apiclient/__init__.pyc
-${PYSITELIB}/apiclient/__init__.pyo
-${PYSITELIB}/apiclient/channel.pyc
-${PYSITELIB}/apiclient/channel.pyo
-${PYSITELIB}/apiclient/discovery.pyc
-${PYSITELIB}/apiclient/discovery.pyo
-${PYSITELIB}/apiclient/errors.pyc
-${PYSITELIB}/apiclient/errors.pyo
-${PYSITELIB}/apiclient/http.pyc
-${PYSITELIB}/apiclient/http.pyo
-${PYSITELIB}/apiclient/mimeparse.pyc
-${PYSITELIB}/apiclient/mimeparse.pyo
-${PYSITELIB}/apiclient/model.pyc
-${PYSITELIB}/apiclient/model.pyo
-${PYSITELIB}/apiclient/sample_tools.pyc
-${PYSITELIB}/apiclient/sample_tools.pyo
-${PYSITELIB}/apiclient/schema.pyc
-${PYSITELIB}/apiclient/schema.pyo
-${PYSITELIB}/apiclient/channel.py
-${PYSITELIB}/apiclient/discovery.py
-${PYSITELIB}/apiclient/errors.py
-${PYSITELIB}/apiclient/http.py
-${PYSITELIB}/apiclient/mimeparse.py
-${PYSITELIB}/apiclient/model.py
-${PYSITELIB}/apiclient/sample_tools.py
-${PYSITELIB}/apiclient/schema.py
-${PYSITELIB}/${EGG_INFODIR}/PKG-INFO
-${PYSITELIB}/${EGG_INFODIR}/SOURCES.txt
-${PYSITELIB}/${EGG_INFODIR}/dependency_links.txt
-${PYSITELIB}/${EGG_INFODIR}/requires.txt
-${PYSITELIB}/${EGG_INFODIR}/top_level.txt
-${PYSITELIB}/oauth2client/__init__.py
-${PYSITELIB}/oauth2client/__init__.pyc
-${PYSITELIB}/oauth2client/__init__.pyo
-${PYSITELIB}/oauth2client/anyjson.pyc
-${PYSITELIB}/oauth2client/anyjson.pyo
-${PYSITELIB}/oauth2client/appengine.pyc
-${PYSITELIB}/oauth2client/appengine.pyo
-${PYSITELIB}/oauth2client/client.pyc
-${PYSITELIB}/oauth2client/client.pyo
-${PYSITELIB}/oauth2client/clientsecrets.pyc
-${PYSITELIB}/oauth2client/clientsecrets.pyo
-${PYSITELIB}/oauth2client/crypt.pyc
-${PYSITELIB}/oauth2client/crypt.pyo
-${PYSITELIB}/oauth2client/django_orm.pyc
-${PYSITELIB}/oauth2client/django_orm.pyo
-${PYSITELIB}/oauth2client/file.pyc
-${PYSITELIB}/oauth2client/file.pyo
-${PYSITELIB}/oauth2client/gce.pyc
-${PYSITELIB}/oauth2client/gce.pyo
-${PYSITELIB}/oauth2client/keyring_storage.pyc
-${PYSITELIB}/oauth2client/keyring_storage.pyo
-${PYSITELIB}/oauth2client/locked_file.pyc
-${PYSITELIB}/oauth2client/locked_file.pyo
-${PYSITELIB}/oauth2client/multistore_file.pyc
-${PYSITELIB}/oauth2client/multistore_file.pyo
-${PYSITELIB}/oauth2client/old_run.pyc
-${PYSITELIB}/oauth2client/old_run.pyo
-${PYSITELIB}/oauth2client/tools.pyc
-${PYSITELIB}/oauth2client/tools.pyo
-${PYSITELIB}/oauth2client/util.pyc
-${PYSITELIB}/oauth2client/util.pyo
-${PYSITELIB}/oauth2client/xsrfutil.pyc
-${PYSITELIB}/oauth2client/xsrfutil.pyo
-${PYSITELIB}/oauth2client/anyjson.py
-${PYSITELIB}/oauth2client/appengine.py
-${PYSITELIB}/oauth2client/client.py
-${PYSITELIB}/oauth2client/clientsecrets.py
-${PYSITELIB}/oauth2client/crypt.py
-${PYSITELIB}/oauth2client/django_orm.py
-${PYSITELIB}/oauth2client/file.py
-${PYSITELIB}/oauth2client/gce.py
-${PYSITELIB}/oauth2client/keyring_storage.py
-${PYSITELIB}/oauth2client/locked_file.py
-${PYSITELIB}/oauth2client/multistore_file.py
-${PYSITELIB}/oauth2client/old_run.py
-${PYSITELIB}/oauth2client/tools.py
-${PYSITELIB}/oauth2client/util.py
-${PYSITELIB}/oauth2client/xsrfutil.py
-${PYSITELIB}/uritemplate/__init__.py
-${PYSITELIB}/uritemplate/__init__.pyc
-${PYSITELIB}/uritemplate/__init__.pyo
